add main tools and settings

--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -36,6 +36,10 @@
     background: url('../assets/eraser.png') no-repeat center center;
   }
 
+  .line {
+    background: url('../assets/line.png') no-repeat center center;
+  }
+
   .undo {
     margin-left: auto;
     background: url('../assets/undo.png') no-repeat center center;
