--- a/src/styles/settingbar.scss
+++ b/src/styles/settingbar.scss
@@ -8,4 +8,23 @@
     top: $toolbar-height;
     box-shadow: 0px 3px 5px $grey-color;
     z-index: 10;
+    display: flex;
+    align-items: center;
+}
+
+label {
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+#line_width {
+    margin-left: 10px;
+}
+
+#stroke_color {
+    margin-left: 10px;
+    border: none;
+    width: 25px;
+    height: 25px;
 }
