--- a/client/src/styles/toolbar.scss
+++ b/client/src/styles/toolbar.scss
@@ -18,6 +18,11 @@
     outline: none;
     background-size: cover;
     margin-left: 10px;
+    cursor: pointer;
+
+    &:hover {
+      filter: invert(33%) sepia(4%) saturate(2%) hue-rotate(340deg) brightness(91%) contrast(86%) !important;
+    }
   }
 
   .brush {
